2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena wrapper for mln::image2d<mln::value::rgb8>.

	* image2d_rgb8.i: New file.
	* Makefile.am (wrappers): Add image2d_rgb8.i.
	* python/swilena.py: Import the contents of module image2d_rgb8.
	* python/Makefile.am (pyexec_LTLIBRARIES): Add _image2d_rgb8.la.
	(nodist__image2d_rgb8_la_SOURCES, _image2d_rgb8_la_LIBADD): New.
	(CLEANFILES): Add $(nodist__image2d_rgb8_la_SOURCES)
	image2d_rgb8.py image2d_rgb8.py[co].
	(nodist_python_PYTHON): Add image2d_rgb8.py.
	(image2d_rgb8-wrap.cc): Add dependencies.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena meta-wrapper for PPM I/O.

	* ppm.ixx: New file.
	* Makefile.am (meta_wrappers): Add ppm.ixx.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a setter in the mln::image2d<T> meta-wrapper.

	* image2d.ixx (mln::image2d<T>::set): New method (extension).

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena wrapper for mln::value::rgb8.

	* rgb8.i: New file.
	* Makefile.am (wrappers): Add rgb8.i.
	* python/swilena.py: Import the contents of module rgb8.
	* python/Makefile.am (pyexec_LTLIBRARIES): Add _rgb8.la.
	(nodist__rgb8_la_SOURCES, _rgb8_la_LIBADD): New.
	(CLEANFILES): Add $(nodist__rgb8_la_SOURCES) rgb8.py rgb8.py[co].
	(nodist_python_PYTHON): Add rgb8.py.
	(rgb8-wrap.cc): Add dependencies.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena meta-wrapper for mln::value::rgb<n>.

	* rgb.ixx: New file.
	* Makefile.am (meta_wrappers): Add rgb.ixx.
	* python/Makefile.am (rgb_ixx_deps): New variable.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Improve dependency management in Swilena/Python.

	* python/Makefile.am (int_u_ixx_deps, box_ixx_deps)
	(morpho_ixx_deps):
	New variables.
	(int_u8-wrap.cc, int_u32-wrap.cc, box2d-wrap.cc)
	(box2d_piter-wrap.cc, point2d-wrap.cc, dynamic_image2d-wrap.cc)
	(image2d_int-wrap.cc, image2d_int_u8-wrap.cc):
	Add dependencies.
